feat: support de la co-incubation d'un produit (#21649)
